--- a/reports/all-tests.html
+++ b/reports/all-tests.html
@@ -18,7 +18,7 @@
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time(s)</th>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/0_AuthenticatorTest.html">AuthenticatorTest</a></td><td><a name="shouldAuthenticateLibrarian"></a><a href="com/tw/biblioteca/0_AuthenticatorTest.html#shouldAuthenticateLibrarian">shouldAuthenticateLibrarian</a></td><td>Success</td><td></td><td>0.214</td>
+<td><a href="com/tw/biblioteca/0_AuthenticatorTest.html">AuthenticatorTest</a></td><td><a name="shouldAuthenticateLibrarian"></a><a href="com/tw/biblioteca/0_AuthenticatorTest.html#shouldAuthenticateLibrarian">shouldAuthenticateLibrarian</a></td><td>Success</td><td></td><td>0.207</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/0_AuthenticatorTest.html">AuthenticatorTest</a></td><td><a name="shouldAuthenticateAUserWithValidLibraryNumberAndPassword"></a><a href="com/tw/biblioteca/0_AuthenticatorTest.html#shouldAuthenticateAUserWithValidLibraryNumberAndPassword">shouldAuthenticateAUserWithValidLibraryNumberAndPassword</a></td><td>Success</td><td></td><td>0.000</td>
@@ -30,7 +30,7 @@
 <td><a href="com/tw/biblioteca/0_AuthenticatorTest.html">AuthenticatorTest</a></td><td><a name="shouldFailAuthenticatingAUserWithInvalidLibraryNumber"></a><a href="com/tw/biblioteca/0_AuthenticatorTest.html#shouldFailAuthenticatingAUserWithInvalidLibraryNumber">shouldFailAuthenticatingAUserWithInvalidLibraryNumber</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/1_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/1_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.012</td>
+<td><a href="com/tw/biblioteca/1_BibliotecaAppTest.html">BibliotecaAppTest</a></td><td><a name="shouldExitWhenQuitIsChosen"></a><a href="com/tw/biblioteca/1_BibliotecaAppTest.html#shouldExitWhenQuitIsChosen">shouldExitWhenQuitIsChosen</a></td><td>Success</td><td></td><td>0.011</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/2_BookTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
@@ -45,7 +45,7 @@
 <td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shouldCompareTwoEqualBooksUsingHashcode"></a><a href="com/tw/biblioteca/2_BookTest.html#shouldCompareTwoEqualBooksUsingHashcode">shouldCompareTwoEqualBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/2_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shouldDisplayInformationAboutBooks"></a><a href="com/tw/biblioteca/2_BookTest.html#shouldDisplayInformationAboutBooks">shouldDisplayInformationAboutBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shoulNotBeEqualToNull"></a><a href="com/tw/biblioteca/2_BookTest.html#shoulNotBeEqualToNull">shoulNotBeEqualToNull</a></td><td>Success</td><td></td><td>0.000</td>
@@ -54,10 +54,10 @@
 <td><a href="com/tw/biblioteca/2_BookTest.html">BookTest</a></td><td><a name="shouldCompareABookToItselfUsingHashcode"></a><a href="com/tw/biblioteca/2_BookTest.html#shouldCompareABookToItselfUsingHashcode">shouldCompareABookToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidMovieNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldAcceptValidMovieNameFromUserAndRemoveTheBook">shouldAcceptValidMovieNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.132</td>
+<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldAcceptValidMovieNameFromUserAndRemoveTheBook"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldAcceptValidMovieNameFromUserAndRemoveTheBook">shouldAcceptValidMovieNameFromUserAndRemoveTheBook</a></td><td>Success</td><td></td><td>0.127</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.005</td>
+<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulReturnAttempt"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulReturnAttempt">shouldDisplayFailureMessageForUnsuccessfulReturnAttempt</a></td><td>Success</td><td></td><td>0.004</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckout"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckout">shouldDisplaySuccessMessageForSuccessfulCheckout</a></td><td>Success</td><td></td><td>0.001</td>
@@ -72,7 +72,7 @@
 <td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt">shouldDisplayFailureMessageForUnsuccessfulCheckoutAttempt</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie">shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie">shouldDisplaySuccessMessageForSuccessfulCheckoutofMovie</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/3_LibraryControllerTest.html">LibraryControllerTest</a></td><td><a name="shouldDisplayFailMessageForUnsuccessfulCheckoutofMovie"></a><a href="com/tw/biblioteca/3_LibraryControllerTest.html#shouldDisplayFailMessageForUnsuccessfulCheckoutofMovie">shouldDisplayFailMessageForUnsuccessfulCheckoutofMovie</a></td><td>Success</td><td></td><td>0.000</td>
@@ -93,19 +93,19 @@
 <td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyCheckoutMovie"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnTrueIfSuccessfullyCheckoutMovie">shouldReturnTrueIfSuccessfullyCheckoutMovie</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToReturn"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnFalseIfFailedToReturn">shouldReturnFalseIfFailedToReturn</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldNotDisplayCheckedOutMovies"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldNotDisplayCheckedOutMovies">shouldNotDisplayCheckedOutMovies</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToCheckoutMovie"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnFalseIfFailedToCheckoutMovie">shouldReturnFalseIfFailedToCheckoutMovie</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnFalseIfFailedToCheckoutMovie"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnFalseIfFailedToCheckoutMovie">shouldReturnFalseIfFailedToCheckoutMovie</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldDisplayListOfBookInformation"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldDisplayListOfBookInformation">shouldDisplayListOfBookInformation</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldAgainDisplayReturnedBooks"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldAgainDisplayReturnedBooks">shouldAgainDisplayReturnedBooks</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/4_LibraryTest.html">LibraryTest</a></td><td><a name="shouldReturnTrueIfSuccessfullyIssued"></a><a href="com/tw/biblioteca/4_LibraryTest.html#shouldReturnTrueIfSuccessfullyIssued">shouldReturnTrueIfSuccessfullyIssued</a></td><td>Success</td><td></td><td>0.000</td>
@@ -120,16 +120,16 @@
 <td><a href="com/tw/biblioteca/5_LoginInterfaceTest.html">LoginInterfaceTest</a></td><td><a name="shouldAcceptPasswordFromUser"></a><a href="com/tw/biblioteca/5_LoginInterfaceTest.html#shouldAcceptPasswordFromUser">shouldAcceptPasswordFromUser</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/6_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/6_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/6_MenuTest.html">MenuTest</a></td><td><a name="shouldReturnMenuOptionChosen"></a><a href="com/tw/biblioteca/6_MenuTest.html#shouldReturnMenuOptionChosen">shouldReturnMenuOptionChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/6_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/6_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/6_MenuTest.html">MenuTest</a></td><td><a name="shouldDisplayMenuOptions"></a><a href="com/tw/biblioteca/6_MenuTest.html#shouldDisplayMenuOptions">shouldDisplayMenuOptions</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldBeEqualToItself"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldBeEqualToItself">shouldBeEqualToItself</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldNotBeEqualToAString"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldNotBeEqualToAString">shouldNotBeEqualToAString</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shoulBeUnequalToAnotherMovieWithDifferentName"></a><a href="com/tw/biblioteca/7_MovieTest.html#shoulBeUnequalToAnotherMovieWithDifferentName">shoulBeUnequalToAnotherMovieWithDifferentName</a></td><td>Success</td><td></td><td>0.000</td>
@@ -141,7 +141,7 @@
 <td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldDisplayInformationAboutMovie"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldDisplayInformationAboutMovie">shouldDisplayInformationAboutMovie</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldCompareAMovieToItselfUsingHashcode"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldCompareAMovieToItselfUsingHashcode">shouldCompareAMovieToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldCompareAMovieToItselfUsingHashcode"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldCompareAMovieToItselfUsingHashcode">shouldCompareAMovieToItselfUsingHashcode</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/7_MovieTest.html">MovieTest</a></td><td><a name="shouldCompareTwoUnequalBooksUsingHashcode"></a><a href="com/tw/biblioteca/7_MovieTest.html#shouldCompareTwoUnequalBooksUsingHashcode">shouldCompareTwoUnequalBooksUsingHashcode</a></td><td>Success</td><td></td><td>0.000</td>
@@ -153,13 +153,16 @@
 <td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCheckoutBookIfOptionThreeIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldCheckoutBookIfOptionThreeIsChosen">shouldCheckoutBookIfOptionThreeIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCallRemoveMovieIfOptionSixIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldCallRemoveMovieIfOptionSixIsChosen">shouldCallRemoveMovieIfOptionSixIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
+<td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCallRemoveMovieIfOptionSixIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldCallRemoveMovieIfOptionSixIsChosen">shouldCallRemoveMovieIfOptionSixIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
+</tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnUserIfLoginOptionIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldReturnUserIfLoginOptionIsChosen">shouldReturnUserIfLoginOptionIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldDisplayListOfBooksIfOptionOneIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldDisplayListOfBooksIfOptionOneIsChosen">shouldDisplayListOfBooksIfOptionOneIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldReturnBookIfOptionFourIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldReturnBookIfOptionFourIsChosen">shouldReturnBookIfOptionFourIsChosen</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCallValidatingMethodOfAuthenticatorIfOptionSevenIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldCallValidatingMethodOfAuthenticatorIfOptionSevenIsChosen">shouldCallValidatingMethodOfAuthenticatorIfOptionSevenIsChosen</a></td><td>Success</td><td></td><td>0.006</td>
@@ -171,7 +174,7 @@
 <td><a href="com/tw/biblioteca/8_TaskDispatcherTest.html">TaskDispatcherTest</a></td><td><a name="shouldCallPrintMoviesIfOptionFiveIsChosen"></a><a href="com/tw/biblioteca/8_TaskDispatcherTest.html#shouldCallPrintMoviesIfOptionFiveIsChosen">shouldCallPrintMoviesIfOptionFiveIsChosen</a></td><td>Success</td><td></td><td>0.001</td>
 </tr>
 <tr valign="top" class="TableRowColor">
-<td><a href="com/tw/biblioteca/9_UserTest.html">UserTest</a></td><td><a name="shouldReturnFalseIfPasswordsDontMatch"></a><a href="com/tw/biblioteca/9_UserTest.html#shouldReturnFalseIfPasswordsDontMatch">shouldReturnFalseIfPasswordsDontMatch</a></td><td>Success</td><td></td><td>0.001</td>
+<td><a href="com/tw/biblioteca/9_UserTest.html">UserTest</a></td><td><a name="shouldReturnFalseIfPasswordsDontMatch"></a><a href="com/tw/biblioteca/9_UserTest.html#shouldReturnFalseIfPasswordsDontMatch">shouldReturnFalseIfPasswordsDontMatch</a></td><td>Success</td><td></td><td>0.000</td>
 </tr>
 <tr valign="top" class="TableRowColor">
 <td><a href="com/tw/biblioteca/9_UserTest.html">UserTest</a></td><td><a name="shouldEquateToAnotherUserWithSameLibraryNumber"></a><a href="com/tw/biblioteca/9_UserTest.html#shouldEquateToAnotherUserWithSameLibraryNumber">shouldEquateToAnotherUserWithSameLibraryNumber</a></td><td>Success</td><td></td><td>0.000</td>
